--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Windows Desktop"
+name="Windows x86_64"
 platform="Windows Desktop"
 runnable=true
 advanced_options=false
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/dist/win/x86_64/"
+export_path="/dist/win_x86_64/Vega2d.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -38,7 +38,7 @@ application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
 application/company_name=""
-application/product_name=""
+application/product_name="Vega2d"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
