--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="I:/Vega2d/Vega2d.exe"
+export_path="/dist/win_x86_64/Vega2d.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
